<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/bg_gray">
    <TabHost
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tabHost">
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
            <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
            </TabWidget>
            <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <LinearLayout
                        android:id="@+id/tab_info"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" android:orientation="vertical" android:paddingTop="20dp"
                        android:paddingBottom="20dp">
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_weight="1"
                            android:paddingLeft="20dp" android:paddingRight="20dp">
                        <Space android:layout_width="fill_parent" android:layout_height="0dp"
                               android:layout_weight="0.5"/>
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="fill_parent"
                                android:layout_height="0dp" android:background="@drawable/round_rect_shape"
                                android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingTop="5dp"
                                android:paddingBottom="5dp" android:layout_weight="5">
                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/balance"
                                    android:textColor="@android:color/darker_gray"
                                    android:gravity="center" android:layout_weight="1"/>
                            <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@drawable/radial_gradient"/>
                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="0dp"
                                    android:text="0.00 Руб."
                                    android:id="@+id/main_balance" android:textSize="30dp"
                                    android:layout_weight="6" android:gravity="center"/>
                        </LinearLayout>
                        <Space
                                android:layout_width="fill_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="fill_parent"
                                android:layout_height="0dp" android:background="@drawable/round_rect_shape"
                                android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingTop="5dp"
                                android:paddingBottom="5dp" android:layout_weight="5">
                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/month_inflow"
                                    android:textColor="@android:color/darker_gray" android:layout_weight="1"
                                    android:gravity="center"/>
                            <View
                                    android:layout_width="fill_parent"
                                    android:layout_height="1dp"
                                    android:background="@drawable/radial_gradient"/>
                            <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="0dp"
                                    android:text="0.00 Руб."
                                    android:id="@+id/main_month_inflow" android:textSize="30dp"
                                    android:textColor="@color/green"
                                    android:layout_weight="6" android:gravity="center"/>
                        </LinearLayout>
                        <Space
                                android:layout_width="fill_parent"
                                android:layout_height="0dp"
                                android:layout_weight="0.5"/>
                    </LinearLayout>
                    <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_weight="1"
                            android:paddingLeft="20dp" android:paddingRight="20dp">
                        <Space android:layout_width="fill_parent" android:layout_height="0dp"
                               android:layout_weight="0.5"/>
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="fill_parent"
                                android:layout_height="0dp" android:background="@drawable/round_rect_shape"
                                android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingTop="5dp"
                                android:paddingBottom="5dp" android:layout_weight="5">
                            <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/month_outflow"
                                    android:textColor="@android:color/darker_gray" android:gravity="center"
                                    android:layout_weight="1"/>
                            <View
                                    android:layout_width="fill_parent"
                                    android:layout_height="1dp"
                                    android:background="@drawable/radial_gradient"/>
                            <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="0dp"
                                    android:text="0.00 Руб."
                                    android:id="@+id/main_month_outflow"
                                    android:textSize="30dp"
                                    android:textColor="@color/red" android:gravity="center" android:layout_weight="6"/>
                        </LinearLayout>
                        <Space
                                android:layout_width="fill_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"/>
                        <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="fill_parent"
                                android:layout_height="0dp" android:background="@drawable/round_rect_shape"
                                android:paddingLeft="20dp" android:paddingRight="20dp" android:paddingTop="5dp"
                                android:paddingBottom="5dp" android:layout_weight="5">
                            <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/month_profit"
                                    android:id="@+id/main_month_profit_label"
                                    android:textColor="@android:color/darker_gray" android:gravity="center"
                                    android:layout_weight="1"/>
                            <View
                                    android:layout_width="fill_parent"
                                    android:layout_height="1dp"
                                    android:background="@drawable/radial_gradient"/>
                            <TextView
                                    android:layout_width="fill_parent"
                                    android:layout_height="0dp"
                                    android:text="0.00 Руб."
                                    android:id="@+id/main_month_profit" android:textSize="30dp"
                                    android:gravity="center" android:layout_weight="6"/>
                        </LinearLayout>
                        <Space android:layout_width="fill_parent" android:layout_height="0dp"
                               android:layout_weight="0.5" android:id="@+id/space"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@+id/tab_out" android:layout_width="fill_parent"
                              android:layout_height="fill_parent" android:orientation="vertical">
                    <ListView android:layout_width="fill_parent" android:layout_height="0dp"
                              android:id="@+id/outflowListView" android:divider="@android:color/transparent"
                              android:dividerHeight="20dp" android:padding="20dp" android:layout_weight="1"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" android:padding="20dp">
                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/add"
                                android:id="@+id/main_btn_add_out" android:textColor="@android:color/white"
                                android:background="@drawable/button" android:onClick="onBtnClick"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/tab_in"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" android:orientation="vertical">
                    <ListView android:layout_width="match_parent" android:layout_height="0dp"
                              android:id="@+id/inflowListView" android:divider="@android:color/transparent"
                              android:dividerHeight="20dp" android:padding="20dp" android:layout_weight="1"/>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                                  android:layout_height="wrap_content" android:padding="20dp"
                            >
                        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                                android:text="@string/add" android:id="@+id/main_btn_add_in"
                                android:textColor="@android:color/white" android:background="@drawable/button"
                                android:onClick="onBtnClick"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:id="@+id/tab_acc" android:layout_width="fill_parent"
                              android:layout_height="fill_parent" android:orientation="vertical">
                    <ListView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:id="@+id/accListView" android:divider="@android:color/transparent"
                            android:dividerHeight="20dp" android:padding="20dp" android:layout_weight="1"/>
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                                  android:layout_height="wrap_content" android:padding="20dp"
                            >
                        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                                android:text="@string/add" android:id="@+id/main_btn_add_acc"
                                android:textColor="@android:color/white" android:background="@drawable/button"
                                android:onClick="onBtnClick"/>
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>

